--- a/app/src/main/res/layout/activity_changes_explorer.xml
+++ b/app/src/main/res/layout/activity_changes_explorer.xml
@@ -6,5 +6,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.edu.agh.mobilecodereviewer.activities.changes.explorer.ChangesExplorer">
+    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer">
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
