--- a/app/src/main/res/menu/changes_explorer.xml
+++ b/app/src/main/res/menu/changes_explorer.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="pl.edu.agh.mobilecodereviewer.activities.changes.explorer.ChangesExplorer" >
+    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/pl.agh.edu.mobilecodereviewer.settings"
