--- a/app/src/main/res/layout/activity_modified_files.xml
+++ b/app/src/main/res/layout/activity_modified_files.xml
@@ -6,12 +6,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer">
+    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ModifiedFiles">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/changesExplorerListView"
+        android:id="@+id/modifiedFilesListView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
