--- a/app/src/main/res/layout/activity_source_explorer.xml
+++ b/app/src/main/res/layout/activity_source_explorer.xml
@@ -8,9 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer">
 
-    <TextView
-        android:text="@string/hello_world"
+    <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
