--- a/app/src/main/res/layout/layout_source_code.xml
+++ b/app/src/main/res/layout/layout_source_code.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent" >
     <TableRow>
         <ImageView
-            android:id="@+id/img"
+            android:id="@+id/commentImage"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="25dp"/>
         <TextView
-            android:id="@+id/txt"
+            android:id="@+id/codeText"
             android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+            android:layout_height="25dp" />
     </TableRow>
 </TableLayout>
