--- a/app/src/main/res/layout/activity_changes_explorer.xml
+++ b/app/src/main/res/layout/activity_changes_explorer.xml
@@ -8,10 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ChangesExplorer">
 
-    <ListView
+    <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/changesExplorerListView"
+        android:id="@+id/changesExplorerExpandableListView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
