--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
 
+    <dimen name="expandable_group_height">45dp</dimen>
+    <dimen name="expandable_child_height">45dp</dimen>
+
+    <dimen name="expandable_group_font_size">17dp</dimen>
+    <dimen name="expandable_child_font_size">15dp</dimen>
+
     </resources>
