--- a/app/src/main/res/layout/activity_change_info_tab.xml
+++ b/app/src/main/res/layout/activity_change_info_tab.xml
@@ -4,130 +4,108 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
         android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.tabs.changeInfoTab.label"
         style="@style/change_details_tab_header"/>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/changeInfoTabLabel"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_height="fill_parent">
 
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content"
+            style="@style/common_activity_margins">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical">
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.changeId" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabChangeIdValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.owner" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabOwnerValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.project" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabProjectValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.topic" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabTopicValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.uploaded" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabUploadedValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.updated" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabUpdatedValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.sumbitType" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabSubmitTypeValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.status" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabStatusValue" />
 
-                <View style="@style/activity_change_info_tab_separator" />
+                <View style="@style/common_horizontal_separator" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_label"
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.mergeable" />
 
                 <TextView
-                    style="@style/activity_change_info_tab_value"
-                    android:text="VALUE"
+                    style="@style/common_list_item_value"
                     android:id="@+id/changeInfoTabMergeableValue" />
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
 
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
