--- a/app/src/main/res/layout/activity_reviewers_tab.xml
+++ b/app/src/main/res/layout/activity_reviewers_tab.xml
@@ -14,33 +14,41 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
 
         <TextView
             style="@style/reviewers_tab_reviewer_column"
-            android:gravity="center_horizontal|left"
+            android:layout_height="@dimen/common_big_line_height"
+            android:gravity="center_vertical|left"
             android:text="@string/pl.agh.edu.mobilecodereviewer.ReviewersTab.reviewer"/>
+
+        <View style="@style/common_vertical_separator"/>
 
         <Spinner
             style="@style/reviewers_tab_label_column"
+            android:layout_height="wrap_content"
             android:id="@+id/reviewersTabLabelSpinner"
-            android:gravity="center"/>
-
-
+            android:gravity="center"
+            />
     </LinearLayout>
 
+    <View style="@style/common_horizontal_separator"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        />
+
     <ListView
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="5dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/reviewersTabReviewersList"
         />
 
+    <View style="@style/common_horizontal_separator"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
 </LinearLayout>
