--- a/app/src/main/res/layout/layout_change_message.xml
+++ b/app/src/main/res/layout/layout_change_message.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/darker_gray">
 
         <TextView
             android:layout_width="0dp"
@@ -18,9 +19,9 @@
             android:id="@+id/changeMessageAuthorName"
             android:layout_weight="0.65"
             android:layout_marginRight="5dp"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center_vertical|left"
             android:textStyle="bold"
-            android:textSize="15dp"/>
+            android:textSize="@dimen/common_small_font_size"/>
 
         <TextView
             android:layout_width="0dp"
@@ -30,7 +31,7 @@
             android:id="@+id/changeMessageDate"
             android:textStyle="bold"
             android:gravity="right"
-            android:textSize="15dp"/>
+            android:textSize="@dimen/common_small_font_size"/>
     </LinearLayout>
 
     <TextView
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:text="Mesage text"
         android:id="@+id/changeMessageContent"
-        android:textSize="15dp"
+        android:textSize="@dimen/common_small_font_size"
+        android:layout_marginBottom="10dp"
         />
 </LinearLayout>
