--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,11 @@
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
 
-    <dimen name="expandable_group_height">45dp</dimen>
-    <dimen name="expandable_child_height">45dp</dimen>
+    <dimen name="common_big_line_height">45dp</dimen>
+    <dimen name="common_medium_line_height">30dp</dimen>
+    <dimen name="common_small_line_height">20dp</dimen>
 
-    <dimen name="expandable_group_font_size">17dp</dimen>
-    <dimen name="expandable_child_font_size">15dp</dimen>
+    <dimen name="common_medium_font_size">17sp</dimen>
+    <dimen name="common_small_font_size">15sp</dimen>
 
     </resources>
