--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,14 +4,21 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
     </style>
 
-    <style name="activity_change_info_tab_label">
+    <style name="common_activity_margins">
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
+    </style>
+
+    <style name="common_list_item_label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/expandable_child_font_size</item>
+        <item name="android:textSize">@dimen/common_small_font_size</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="activity_change_info_tab_value">
+    <style name="common_list_item_value">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">5dp</item>
@@ -19,18 +26,24 @@
         <item name="android:paddingLeft">5dp</item>
     </style>
 
-    <style name="activity_change_info_tab_separator">
+    <style name="common_horizontal_separator">
         <item name="android:layout_height">1dp</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:background">@android:color/darker_gray</item>
     </style>
 
+    <style name="common_vertical_separator">
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">1dp</item>
+        <item name="android:background">@android:color/darker_gray</item>
+    </style>
+
     <style name="change_details_tab_header">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_height">@dimen/common_medium_line_height</item>
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:textSize">17dp</item>
+        <item name="android:textSize">@dimen/common_medium_font_size</item>
         <item name="android:textStyle">bold</item>
         <item name="android:background">@android:color/holo_blue_light</item>
         <item name="android:gravity">center</item>
@@ -39,16 +52,16 @@
     <style name="reviewers_tab_reviewer_column">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">0.6</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">@dimen/common_big_line_height</item>
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">@dimen/common_small_font_size</item>
     </style>
 
     <style name="reviewers_tab_label_column">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">@dimen/common_big_line_height</item>
         <item name="android:layout_weight">0.4</item>
     </style>
 
