--- a/app/src/main/res/layout/activity_source_explorer.xml
+++ b/app/src/main/res/layout/activity_source_explorer.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -8,10 +9,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer">
 
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:background="@drawable/source_code_diff_icon"
+        android:id="@+id/sourceDiffToggleButton" />
+
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/sourceLinesListView"
-        android:layout_alignParentTop="true"
         android:footerDividersEnabled="false" />
-</RelativeLayout>
+</LinearLayout>
