--- a/app/src/main/res/layout/activity_source_explorer.xml
+++ b/app/src/main/res/layout/activity_source_explorer.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,30 +8,122 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer">
+    tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer"
+    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
 
     <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/source_code_diff_icon"
-        android:id="@+id/sourceDiffToggleButton" />
-
-    <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/source_code_write_comment"
-        android:id="@+id/sourceWriteCommentButton" />
+        android:id="@+id/sourceDiffToggleButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"/>
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_below="@id/sourceDiffToggleButton"
-        android:layout_above="@id/sourceWriteCommentButton"
         android:id="@+id/sourceLinesListView"
-        android:footerDividersEnabled="false" />
+        android:footerDividersEnabled="false"
+        android:layout_above="@+id/optionsLayout"
+        android:layout_below="@id/sourceDiffToggleButton"
+        android:choiceMode="singleChoice"
+        android:listSelector="@android:color/holo_blue_light"
+        android:background="?android:attr/activatedBackgroundIndicator" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/optionsLayout"
+        android:orientation="vertical">
+
+
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/source_code_write_comment"
+            android:id="@+id/showHideCommentOptionsButton"
+            android:layout_gravity="right"
+            android:visibility="visible" />
+
+        <TabHost
+            android:layout_width="fill_parent"
+            android:layout_height="173dp"
+            android:id="@+id/commentOptionsTab"
+            android:visibility="visible"
+            android:layout_gravity="bottom">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.88"
+                    android:visibility="visible"
+                    android:baselineAligned="false"
+                    android:showDividers="beginning|middle|end"></TabWidget>
+
+                    <FrameLayout
+                        android:id="@android:id/tabcontent"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/Manual"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+
+                                <RelativeLayout
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/optionsRelativeLayout"
+                                    android:layout_alignParentBottom="true">
+
+                                    <EditText
+                                        android:layout_width="fill_parent"
+                                        android:layout_height="120dp"
+                                        android:layout_toLeftOf="@+id/buttonsLayout"
+                                        android:id="@+id/commentContentTextView"
+                                        android:background="#ffffffff" />
+
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentRight="true"
+                                        android:id="@+id/buttonsLayout"
+                                        android:orientation="vertical">
+
+                                        <ImageButton
+                                            android:layout_width="60dp"
+                                            android:layout_height="60dp"
+                                            android:background="@drawable/sendcomment"
+                                            android:id="@+id/sendCommentButton"
+                                            android:layout_alignParentRight="true" />
+
+                                        <ImageButton
+                                            android:layout_width="60dp"
+                                            android:layout_height="60dp"
+                                            android:background="@drawable/cancelicon"
+                                            android:id="@+id/cancelCommentButton"
+                                            android:layout_alignParentRight="true" />
+
+                                    </LinearLayout>
+
+                                </RelativeLayout>
+
+                            </LinearLayout>
+
+                    </FrameLayout>
+            </LinearLayout>
+        </TabHost>
+
+    </LinearLayout>
 
 </RelativeLayout>
