--- a/app/src/main/res/menu/source_explorer.xml
+++ b/app/src/main/res/menu/source_explorer.xml
@@ -6,4 +6,10 @@
         android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
         android:orderInCategory="100"
         android:showAsAction="never" />
+
+    <item android:id="@+id/sourceDiffToggleButton"
+        android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
+        android:icon="@drawable/source_code_diff_icon"
+        android:orderInCategory="100"
+        android:showAsAction="always" />
 </menu>
