--- a/app/src/main/res/layout/layout_add_review.xml
+++ b/app/src/main/res/layout/layout_add_review.xml
@@ -22,4 +22,16 @@
 
     </EditText>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select vote for the review"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Spinner
+        android:id="@+id/reviewVoteSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></Spinner>
+
 </LinearLayout>
