--- a/app/src/main/res/layout/activity_source_explorer.xml
+++ b/app/src/main/res/layout/activity_source_explorer.xml
@@ -4,14 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer"
     android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
 
     <ListView
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:id="@+id/sourceLinesListView"
@@ -22,96 +21,68 @@
         android:background="?android:attr/activatedBackgroundIndicator" />
 
     <LinearLayout
-        android:background="@android:color/white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:visibility="visible"
         android:layout_alignParentBottom="true"
         android:id="@+id/optionsLayout"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        >
 
         <ImageButton
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/expand_icon"
+            android:background="@drawable/common_expand_icon"
             android:id="@+id/showHideCommentOptionsButton"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="-10dp"
             android:visibility="visible" />
 
-        <TabHost
-            android:layout_width="fill_parent"
-            android:layout_height="173dp"
-            android:id="@+id/commentOptionsTab"
-            android:visibility="visible"
-            android:layout_gravity="bottom">
-
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="173dp"
                 android:orientation="vertical"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:id="@+id/addCommentOptions"
+                android:background="@drawable/rectangle_border_black"
+                >
 
-                <TabWidget
-                    android:id="@android:id/tabs"
+                <RelativeLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.88"
-                    android:visibility="visible"
-                    android:baselineAligned="false"
-                    android:showDividers="beginning|middle|end"></TabWidget>
+                    android:id="@+id/optionsRelativeLayout"
+                    android:layout_alignParentBottom="true">
 
-                    <FrameLayout
-                        android:id="@android:id/tabcontent"
+                    <EditText
                         android:layout_width="fill_parent"
-                        android:layout_height="wrap_content">
-
-                        <LinearLayout
-                            android:id="@+id/Manual"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content">
-
-                            <RelativeLayout
-                                android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/optionsRelativeLayout"
-                                android:layout_alignParentBottom="true">
-
-                                <EditText
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="120dp"
-                                    android:id="@+id/commentContentTextView"
-                                    android:background="@drawable/rectangle_background"
-                                    android:hint="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.comment.placeholder"/>
+                        android:layout_height="100dp"
+                        android:id="@+id/commentContentTextView"
+                        android:background="@drawable/rectangle_border_blue"
+                        android:hint="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.comment.placeholder"
+                        android:layout_margin="15dp"
+                        android:padding="5dp"/>
 
 
-                                <ImageButton
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
-                                    android:background="@drawable/common_cancel_icon"
-                                    android:id="@+id/cancelCommentButton"
-                                    android:layout_alignParentBottom="true"
-                                    android:layout_alignParentLeft="true"
-                                    android:layout_alignParentStart="true" />
+                    <ImageButton
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/common_cancel_icon"
+                        android:id="@+id/cancelCommentButton"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" />
 
-                                <ImageButton
-                                    android:layout_width="60dp"
-                                    android:layout_height="60dp"
-                                    android:background="@drawable/common_accept_icon"
-                                    android:id="@+id/sendCommentButton"
-                                    android:layout_alignParentBottom="true"
-                                    android:layout_alignParentRight="true"
-                                    android:layout_alignParentEnd="true" />
+                    <ImageButton
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/common_accept_icon"
+                        android:id="@+id/sendCommentButton"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
 
-                            </RelativeLayout>
-                        </LinearLayout>
-
-                    </FrameLayout>
-
+                </RelativeLayout>
             </LinearLayout>
-        </TabHost>
-
     </LinearLayout>
 
 </RelativeLayout>
