--- a/app/src/main/res/menu/change_details.xml
+++ b/app/src/main/res/menu/change_details.xml
@@ -1,9 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.ChangeDetails" >
-    
+
+    <item android:id="@+id/action_about"
+        android:title="@string/pl.agh.edu.mobilecodereviewer.about"
+        android:icon="@drawable/common_help_icon"
+        android:orderInCategory="100"
+        android:showAsAction="always" />
+
     <item android:id="@+id/action_addReview"
         android:title="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.menu.addReview"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/change_details_add_review_icon"
+        android:orderInCategory="0"
+        android:showAsAction="always" />
+
 </menu>
