--- a/app/src/main/res/menu/source_explorer.xml
+++ b/app/src/main/res/menu/source_explorer.xml
@@ -1,15 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pl.edu.agh.mobilecodereviewer.view.activities.SourceExplorer" >
-    
-    <item android:id="@+id/action_settings"
-        android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
+
+    <item android:id="@+id/action_about"
+        android:title="@string/pl.agh.edu.mobilecodereviewer.about"
+        android:icon="@drawable/common_help_icon"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="always" />
 
     <item android:id="@+id/sourceDiffToggleButton"
         android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.title"
         android:icon="@drawable/source_code_diff_icon"
-        android:orderInCategory="100"
+        android:orderInCategory="0"
         android:showAsAction="always" />
 </menu>
