Added button to show/hide password in configuration activity

--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -104,6 +104,11 @@
 
         </LinearLayout>
 
+        <CheckBox
+            style="@style/configuration_icon"
+            android:text="@string/pl.agh.edu.mobilecodereviewer.Configuration.showPassword"
+            android:id="@+id/showHidePasswordCheckbox" />
+
     </LinearLayout>
 
     <CheckBox
